--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       font-family: 'Inter', sans-serif;
     }
   </style>
-  <title>React admin App</title>
+  <title>Dango shop admin</title>
 </head>
 
 <body>
